# reminders

./: .editorconfig
api/: Cargo.toml  Dockerfile  Makefile  cloudbuild.yaml
api/src/: firebase.rs  logger.rs  main.rs  util.rs
api/src/middleware/: auth.rs
api/src/models/: generic_response.rs  mod.rs  reminder.rs  result.rs
api/src/routes/: err_404.rs  mod.rs
api/src/routes/reminders/: delete.rs  get.rs  mod.rs  post.rs  put.rs
api/src/routes/reminders/v2/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
frontend/: Makefile  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart  reminders.dart
frontend/lib/models/: reminder.dart
frontend/lib/pages/: add_reminder.dart  home.dart  update_reminder.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/macos/Runner/: Release.entitlements
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: main.cpp
